[package]
name = "rust-a"
version = "0.1.0"
authors = ["siyuanchen <siyuanchen@thsupcom.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#windows = "0.7.0"
encoding = "0.2"
md5 = "0.7.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hashers = "1.0.1"
wry = "0.6"

[build-dependencies]
#windows = "0.7.0"

[profile.release]
opt-level = 3
lto = true
