[package]
name = "rust-a"
version = "0.2.0"
authors = ["alex8224@gmail.com"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#windows = "0.7.0"
encoding = "0.2"
md5 = "0.7.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hashers = "1.0.1"
#wry = "0.6"
redis = "0.20.0"
uuid = { version = "0.8", features = ["serde", "v4"] }
#salvo = "0.10"
tokio = { version = "1", features = ["full"] }
rand = "0.8.3"
tantivy = "0.14.0"
jieba-rs = { version = "0.6.2", default-features = false }
cang-jie = "0.11.1"
tempfile = "3.2.0"
rustyline = "8.0.0"
syntect = "4.4"
#iced = "0.3"
hyper = { version = "0.14", features = ["full"] }

[build-dependencies]
#windows = "0.7.0"

[profile.release]
opt-level = 3
lto = true
